# Study

./: CMakeLists.txt  README.md
EarthTextureMap/: CMakeLists.txt  main.cpp
EarthVolumeRendering/: CMakeLists.txt
Github_Image_Host/src/: main.cpp
HighlightPicked/: CMakeLists.txt  main.cpp
InteractSeparately/: CMakeLists.txt  main.cpp
Open_Browser/: CMakeLists.txt  README.md  main.cpp
Open_Browser/Source/01Business/: main.qrc  qss.qrc
Open_Browser/Source/03ImageModular/: imagebrowsermanager.cpp  imagebrowsermanager.h
Open_Browser/Source/03ImageModular/PreProcessing/: qopencvprocessing.cpp  qopencvwidget.cpp  qopencvwidget.h
Open_Browser/Source/03ModelModular/: stlmanager.cpp  stlmanager.h
Open_Browser/Source/03ModelModular/PreProcessing/CGALThread/: cgalthreadfill.cpp  cgalthreadsubdivision.cpp  cgalthreadsubdivision.h
Open_Browser/Source/06Test/Anisotropicfiltering/: anisotropicfiltering.cpp
Open_Browser/Source/06Test/MinPath/: custom_item.cpp  custom_item.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  minimalpathextraction.h
Open_Browser/preview_V0/: README.md
Opengl/: .gitignore  README.md
Opengl/LearnOpenGL/: CMakeLists.txt  main.cpp
Opengl/LearnOpenGL/chapter1/: Chapter1  glwidget_1_1.cpp  glwidget_1_2.cpp  glwidget_1_3.cpp  glwidget_1_4.cpp  glwidget_1_4.h
Opengl/LearnOpenGL/class1/chapter1/: glwidget_1_1.cpp  glwidget_1_1.h  glwidget_1_2.cpp  glwidget_1_2.h  glwidget_1_3.cpp  glwidget_1_3.h
Opengl/LearnOpenGL/class1/chapter2/: Chapter2  glwidget_2_1.cpp  glwidget_2_1.h  glwidget_2_2.cpp  glwidget_2_2.h  glwidget_2_3.cpp  glwidget_2_3.h  glwidget_2_4.cpp  glwidget_2_4.h  glwidget_2_5.cpp  glwidget_2_5.h  glwidget_2_6.cpp  glwidget_2_6.h  resource.qrc  shapes_2_2.frag  shapes_2_2.vert  shapes_2_5.frag  shapes_2_5.vert
Opengl/LearnOpenGL/class1/chapter3/: Chapter3  glwidget_3_1.cpp  glwidget_3_1.h  glwidget_3_2.cpp  glwidget_3_2.h  glwidget_3_3.cpp  glwidget_3_3.h  glwidget_3_4.cpp  glwidget_3_4.h  glwidget_3_5.cpp  glwidget_3_5.h  glwidget_3_6.cpp  glwidget_3_6.h  resource.qrc  shapes_3_1.frag  shapes_3_1.vert  shapes_3_2.frag  shapes_3_3.frag  shapes_3_3.vert  shapes_3_6.vert
Opengl/LearnOpenGL/class1/chapter4/: Chapter4  glwidget_4_1.cpp  glwidget_4_1.h  resource.qrc  shapes_4_1.vert
Opengl/LearnOpenGL/class1/chapter5/: Chapter5  glwidget_5_1.cpp  glwidget_5_1.h  resource.qrc  shapes_5_1.vert
Opengl/LearnOpenGL/class1/chapter6/: Chapter6  glwidget_6_1.cpp  glwidget_6_1.h  resource.qrc  shapes_6_1.frag
PedicleScrewSimulation/: CMakeLists.txt  main.cpp  vtk_pediclescrew_source.h
QT/: CMakeLists.txt  README.md
QT/DoubleSlider/: CMakeLists.txt  DoubleSlider.cpp  DoubleSlider.h  main.cpp
QT/PictureBlockSelection/: CMakeLists.txt  main.cpp  picture_block_selection_widget.cpp  picture_block_selection_widget.h
Quick_Event/: CMakeLists.txt
Quick_Event/Examples/Example1/: CMakeLists.txt  gray_style.qss
Quick_Event/Examples/resource/: style.qrc
RUST/: README.md
RUST/qt_moc/qtrcc_rs/: Cargo.toml
RUST/qt_moc/qtrcc_rs/data/: resources.qrc  test.cpp
RUST/qt_moc/qtrcc_rs/src/: main.rs  resource_library.rs
RUST/rust_by_example/hello_word/: Cargo.toml
RUST/rust_by_example/hello_word/src/: main.rs
RUST/the_rust_programming_language/chapter_02/gussing_game/: Cargo.toml
RUST/the_rust_programming_language/chapter_02/gussing_game/src/: main.rs
RUST/the_rust_programming_language/chapter_03/exercises_3/: Cargo.toml
RUST/the_rust_programming_language/chapter_03/exercises_3/src/: main.rs
RUST/the_rust_programming_language/chapter_03/grammar/src/: main.rs
RUST/the_rust_programming_language/chapter_04/exercises_4/: Cargo.toml
RUST/the_rust_programming_language/chapter_04/exercises_4/src/: main.rs
ScalpelCutting/: CMakeLists.txt  main.cpp  render_widget.cpp  render_widget.h
Stl2Png/: CMakeLists.txt  main.cpp
VTK/: CMakeLists.txt  README.md
VTK/EarthVolumeRendering/: main.cpp
VTK/InteractSeparately/: main.cpp
VTK/PedicleScrewSimulation/: CMakeLists.txt  vtk_pediclescrew_source.cpp
VTK/ScalpelCutting/: render_widget.cpp  render_widget.h
VTK/Stl2Png/: CMakeLists.txt
python/StudyNumpy/: main.py  salary.csv
